src/theme-gcwu-fegc/sass/includes/sp-pe.scss
@charset "utf-8";
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * www.tbs.gc.ca/ws-nw/wet-boew/terms / www.sct.gc.ca/ws-nw/wet-boew/conditions
 */
h1 {
	font-size: 2em;
	color:#222;
	border:none;
	font-weight:bold;
	margin-bottom:0 !important;
}

h2 {
	position: absolute;
	clip: rect(1px, 1px, 1px, 1px);
	height: 0px !important;
	width: 0px !important;
	overflow: hidden !important;
	margin: 0 !important;
}

#wb-skip {
	display:none;
	visibility:hidden;
}

#gcwu-title-left, #gcwu-title-right, .gcwu-alt-title-left, .gcwu-alt-title-right {
	padding-top: 10px;
	font-size: 1.5em;
	color: #333;
	font-weight: bold;
}

.gcwu-alt-title-left, .gcwu-alt-title-right {
	font-size: 1.2em;
}

#gcwu-ef-lang, #gcwu-other-lang {
	list-style-type: none;
	display: inline-block;
	margin: 10px 0 0;
	padding-left: 0;
	li {
		float: left;
		padding: 0;
		text-align: center;
			a{
				-webkit-appearance: none;
				background: #ccc url(../images/sp-pe-button.gif) 0 0 repeat-x;
				border-bottom:1px solid #999;
				border-right: 1px solid #999;
				border-top: 1px solid #fff;
				border-left: 1px solid #fff;
				color: #333;
				padding: 10px 0;
				border-radius:2px;
				-moz-border-radius: 2px;
				-webkit-border-radius:2px;
				text-shadow: 0 1px 0 #eee;
				font-weight:700;
				box-shadow:none;
				-moz-box-shadow:none;
				-webkit-box-shadow:none;
				display:block;
				font-size: 120%;
				text-decoration: none;
				&:hover, &:focus, &:active{
					background: #ddd url(../images/sp-pe-button-focus.gif) 0 0 repeat-x;
					text-shadow: 0 1px 0 #ddd;
					box-shadow:none;
					-moz-box-shadow:none;
					-webkit-box-shadow:none;
					border: 1px solid #999;
				}
			}
	}
	div {
		min-width: 8em;
	}
}

#gcwu-ef-lang li {
	display: inline-block;
	a:active{
		-moz-box-shadow: inset 0 0 5px 2px #999, 0 0 0 0 #eee;
		-webkit-box-shadow: inset 0 0 5px 2px #999, 0 0 0 0 #eee;
		box-shadow: inset 0 0 5px 2px #999, 0 0 0 0 #eee;
	}
}

#gcwu-tc{
	margin-top:0;
}

#gcwu-ef-tc, #gcwu-other-tc {
	list-style-type: none;
	display: inline-block;
	margin: 0;
	padding-top: 1px;
	padding-left: 0;
	line-height: normal;
	li {
		float: left;
		padding: 0;
		a {
			display: block;
			text-decoration: none;
			font-size: 0.9em;
			&:hover, &:focus, &:active {
				text-decoration: underline;
			}
		}
	}
	div {
		min-width: 8em;
	}
}

